--- a/custom.css
+++ b/custom.css
@@ -1,14 +1,268 @@
-/* Customizing the default theme */
-body {
-    background-color: #e61515;
-    font-family: 'Roboto', sans-serif;
-  }
+/* @theme custom-theme */
+
+@import 'default'; /* Optional: Import the default theme */
+
+/* Root Variables */
+:root {
+  --background-color: #ffffff;
+  --background-secondary-color: #F3F5F7;
+  --background-tertiary-color: #E4E5E6;
+  --text-color: #444444;
+  --text-secondary-color: #888888;
+  --text-tertiary-color: #d9d9d9;
+  --accent-color: #DD4C4F;
+  --text-font: "matthew";
+  --heading-font: "matthewheadline";
+  --code-font: "roboto-mono";
+  --stroke-color: #D9D9D9;
+}
+
+/* Font Faces */
+@font-face {
+  font-family: 'matthew';
+  src: url('/fonts/matthewui-regular-webfont.woff2') format('woff2'),
+       url('/fonts/matthewui-regular-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'matthew';
+  src: url('/fonts/matthewui-italic-webfont.woff2') format('woff2'),
+       url('/fonts/matthewui-italic-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'matthew';
+  src: url('/fonts/matthewui-medium-webfont.woff2') format('woff2'),
+       url('/fonts/matthewui-medium-webfont.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'matthew';
+  src: url('/fonts/matthewui-mediumitalic-webfont.woff2') format('woff2'),
+       url('/fonts/matthewui-mediumitalic-webfont.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'matthew';
+  src: url('/fonts/matthewui-bold-webfont.woff2') format('woff2'),
+       url('/fonts/matthewui-bold-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'matthew';
+  src: url('/fonts/matthewui-bolditalic-webfont.woff2') format('woff2'),
+       url('/fonts/matthewui-bolditalic-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'matthewheadline';
+  src: url('/fonts/matthewuiheadline-bold-webfont.woff2') format('woff2'),
+       url('/fonts/matthewuiheadline-bold-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'matthewheadline';
+  src: url('/fonts/matthewuiheadline-bolditalic-webfont.woff2') format('woff2'),
+       url('/fonts/matthewuiheadline-bolditalic-webfont.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'matthewheadline';
+  src: url('/fonts/matthewuiheadline-medium-webfont.woff2') format('woff2'),
+       url('/fonts/matthewuiheadline-medium-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'matthewheadline';
+  src: url('/fonts/matthewuiheadline-mediumitalic-webfont.woff2') format('woff2'),
+       url('/fonts/matthewuiheadline-mediumitalic-webfont.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+/* General Section Styles */
+section {
+  width: 100%;
+  font-family: var(--text-font), sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
   
-  h1, h2, h3 {
-    color: red;
-  }
+}
+
+section::after {
+  content: attr(data-marpit-pagination) '/' attr(data-marpit-pagination-total);
+  font-weight: bold;
+  position: absolute;
+}
+
+footer {
+  /* font-size: 0.9em; */
+  /* color: var(--accent-color); */
   
-  section {
-    border: 20px solid #e74c3c;
-  }
+}
+
+header{
+  font-weight: bold;
+}
+
+/* Text and Headings */
+strong, b {
+  font-family: var(--text-font), sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-weight: bold;
+  color: var(--text-color);
+}
+
+p, li {
+  color: var(--text-secondary-color);
+}
+
+/* Blockquote */
+blockquote {
+  background-color: #f7f7f7;
+  border-left: 5px solid var(--accent-color);
+  padding: 10px;
+  color: var(--text-color);
+  font-style: italic;
+}
+
+/* Code */
+code {
+  background-color: #f4f4f4;
+  color: #e84e4e;
+  font-size: 1.1em;
+}
+
+
+/* List and Table Styles */
+ul {
+  list-style-type: disc;
+}
+
+ul li::marker {
+  color: #DD4C4F;
+}
+
+
+
+table {
   
+  width: 100% !important; /* Ensure table takes full width */
+  border-collapse: collapse;
+  margin: 0; /* Remove any margins */
+}
+
+th, td {
+  
+  border: 1px solid #ddd;
+  padding: 10px; /* Slightly more padding for content space */
+  text-align: left;
+  white-space: nowrap; /* Prevent content from wrapping */
+  width: 100%;
+}
+
+th {
+  background-color: #eaeaea;
+}
+
+tr {
+  width: 100%;
+  
+}
+
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+
+/* Tag Styles */
+.tag {
+  background-color: #DD4C4F;
+  color: #FFFFFF;
+  font-weight: bold;
+  padding: 6px 0.3em;
+  border-radius: 0.3em;
+  line-height: 1.4em;
+}
+
+hr {
+  border: none;
+  padding: 0;
+  height: 2px; /* Thin size */
+  background-color: #DD4C4F; /* Custom color */
+}
+
+
+.image-box {
+  position: relative;
+  width: 33.33%; /* Divide screen into 3 equal sections */
+  height: 70%; /* Full height */
+}
+
+.image-box img {
+  width: 90%;
+  height: 100%;
+  object-fit: cover; /* Make sure the image covers the full box */
+  border-radius: 8px; /* Optional: Rounded corners */
+}
+
+.image-box::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+   width: 90%;
+  height: 40%; /* Adjust this value to control the size of the gradient */
+  background: linear-gradient(to top,rgb(154, 43, 45), rgba(0, 0, 0, 0)); /* Black to transparent gradient */
+  border-radius: 8px; /* Rounded corners matching the image */
+}
+
+.image-box p {
+  position: absolute;
+  bottom: 30px; /* Position text at the bottom */
+  left: 45%; /* Center the text */
+  transform: translateX(-50%); /* Center the text */
+  color: white;
+   
+  
+}
+
+.book-name {
+  color: white;
+  font-size: 18px;
+  font-style: bold;
+  font-weight: 900;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0px; 
+}
+
+.auth-name {
+  color: white;
+  font-size: 24px;
+  font-style: bold;
+  text-align: center;
+  margin-bottom: 40px; 
+}
+
+
